added space navigation

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* src/styles.css */
+
+/* Забезпечує, що html, body та кореневий елемент займають всю висоту */
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* Налаштування стилів для body */
+body {
+  font-family: sans-serif;
+  overflow: hidden; /* Уникає прокрутки сторінки, що може вплинути на рух */
+}
+
+/* Налаштування стилів для canvas */
+canvas {
+  display: block;       /* Видаляє пробіли навколо canvas */
+  width: 100%;
+  height: 100vh;        /* Займає всю висоту вікна перегляду */
+}
+
 /*#react-app{*/
 /*  width: 200px;*/
 /*}*/
