--- a/src/RefactoredPanoramaViewer/styles.module.scss
+++ b/src/RefactoredPanoramaViewer/styles.module.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-height: 100vh
+    height: 100vh;
   }
 
   canvas {
@@ -37,6 +37,10 @@
   position: relative;
   display: flex;
   justify-content: space-between;
+  @media (max-width: 480px) {
+    //overflow: hidden;
+    //height: 100%;
+  }
 }
 
 .plan {
